friendsList-screen_finished

--- a/friends.html
+++ b/friends.html
@@ -11,7 +11,6 @@
     <div class="status-bar">
         <div class="status-bar__column">
             <span>No Service</span>
-            <!-- To Do: Wifi Icon -->
             <i class="fas fa-wifi"></i>
         </div>
         <div class="status-bar__column">
@@ -19,23 +18,72 @@
         </div>
         <div class="status-bar__column">
             <span>110%</span>
-            <!-- Battery Icon -->
             <i class="fas fa-battery-full fa-lg"></i>
-            <!-- Ligtning Icon-->
             <i class="fas fa-bolt"></i>
         </div>
     </div>
+
+    <header class="screen-header">
+        <h1 class="screen-header__title">Friends</h1>
+        <div class="screen-header__icons">
+            <span><i class="fas fa-search fa-lg"></i></span>
+            <span><i class="fas fa-music fa-lg"></i></span>
+            <span><i class="fas fa-cog fa-lg"></i></span>
+        </div>
+    </header>
+
+    <a id="friends-display-link">
+        <i class="fas fa-info-circle"></i>Friends' Names Display<i class="fas fa-chevron-right fa-xs"></i>
+    </a>
+
+    <main class="friends-screen"> 
+        <div class="user-component">
+            <div class="user-component__column">
+                <img src="https://d1telmomo28umc.cloudfront.net/media/public/avatars/whiteapple09-1630023509.jpg" 
+                class="user-component__avatar user-component__avatar--xl"/>
+                <div class="user-component__text">
+                    <h4 class="user-component__title">EB</h4>
+                    <!-- <h6 class="user-component_subtitle">this text whatever</h6> -->
+            </div>
+        </div>
+            <div class="user-component__column"></div>
+        </div>
+        <div class="friends-screen__channel">
+            <div class="friends-screen_channel-header">
+                <span>Channel</span>
+                <i class="fas fa-chevron-up fa-xs"></i>
+            </div>
+            <div class="user-component">
+                <div class="user-component__column">
+                    <img src="https://d1telmomo28umc.cloudfront.net/media/public/avatars/whiteapple09-1630023509.jpg" 
+                    class="user-component__avatar user-component__avatar--sm"/>
+                    <div class="user-component__text">
+                        <h4 class="user-component__title user-component__title--not-bold">Channel</h4>
+                </div>
+                </div>
+                <div class="user-component__column">
+                    <span>2</span>
+                    <i class="fas fa-chevron-right fa-xs"></i>
+                </div>
+            </div>
+        </div>
+    </main>
+
 
     <nav class="nav">
         <ul class="nav__list">
             <li class="nav__btn">
                 <a class="nav__link" href="friends.html"><i class="fas fa-user fa-2x"></i></a></li>
             <li class="nav__btn">
-                <a class="nav__link" href="#"><i class="far fa-comment fa-2x"></i></a></li>
+                <a class="nav__link" href="#">
+                    <span class="nav__notification">1</span>
+                    <i class="far fa-comment fa-2x"></i></a></li>
             <li class="nav__btn">
-                <a class="nav__link" href="#"><i class="fas fa-search fa-lg"></i></a></li>
+                <a class="nav__link" href="#"><i class="fas fa-search fa-2x"></i></a></li>
             <li class="nav__btn">
-                <a class="nav__link" href="#"><i class="fas fa-ellipsis-h fa-lg"></i></a></li>
+                <a class="nav__link" href="#">
+                    <span class="nav__notification2"></span>
+                    <i class="fas fa-ellipsis-h fa-2x"></i></a></li>
         </ul>
     </nav>      
 
