--- a/chats.html
+++ b/chats.html
@@ -37,35 +37,19 @@
         <i class="fas fa-info-circle"></i>Friends' Names Display<i class="fas fa-chevron-right fa-xs"></i>
     </a>
 
-    <main class="friends-screen"> 
+    <main class="main-screen"> 
         <div class="user-component">
             <div class="user-component__column">
                 <img src="https://d1telmomo28umc.cloudfront.net/media/public/avatars/whiteapple09-1630023509.jpg" 
-                class="user-component__avatar user-component__avatar--xl"/>
+                class="user-component__avatar user-component__avatar"/>
                 <div class="user-component__text">
-                    <h4 class="user-component__title">EB</h4>
-                    <!-- <h6 class="user-component_subtitle">this text whatever</h6> -->
+                    <h4 class="user-component__title">KokoaTalk</h4>
+                    <h6 class="user-component_subtitle">Please check My Kokoa Account Info</h6>
             </div>
         </div>
-            <div class="user-component__column"></div>
-        </div>
-        <div class="friends-screen__channel">
-            <div class="friends-screen_channel-header">
-                <span>Channel</span>
-                <i class="fas fa-chevron-up fa-xs"></i>
-            </div>
-            <div class="user-component">
-                <div class="user-component__column">
-                    <img src="https://d1telmomo28umc.cloudfront.net/media/public/avatars/whiteapple09-1630023509.jpg" 
-                    class="user-component__avatar user-component__avatar--sm"/>
-                    <div class="user-component__text">
-                        <h4 class="user-component__title user-component__title--not-bold">Channel</h4>
-                </div>
-                </div>
-                <div class="user-component__column">
-                    <span>2</span>
-                    <i class="fas fa-chevron-right fa-xs"></i>
-                </div>
+            <div class="user-component__column">
+                <span class="user-component__time">21:22</span>
+                <div class="badge">1</div>
             </div>
         </div>
     </main>
@@ -77,7 +61,7 @@
                 <a class="nav__link" href="friends.html"><i class="far fa-user fa-2x"></i></a></li>
             <li class="nav__btn">
                 <a class="nav__link" href="chats.html">
-                    <span class="nav__notification">1</span>
+                    <span class="nav__notification badge">1</span>
                     <i class="fas fa-comment fa-2x"></i></a></li>
             <li class="nav__btn">
                 <a class="nav__link" href="find.html"><i class="fas fa-search fa-2x"></i></a></li>
