--- a/friends.html
+++ b/friends.html
@@ -62,8 +62,10 @@
                 </div>
                 </div>
                 <div class="user-component__column">
+                    <div>
                     <span>2</span>
                     <i class="fas fa-chevron-right fa-xs"></i>
+                </div>
                 </div>
             </div>
         </div>
@@ -75,7 +77,7 @@
                 <a class="nav__link" href="friends.html"><i class="fas fa-user fa-2x"></i></a></li>
             <li class="nav__btn">
                 <a class="nav__link" href="chats.html">
-                    <span class="nav__notification">1</span>
+                    <span class="nav__notification badge">1</span>
                     <i class="far fa-comment fa-2x"></i></a></li>
             <li class="nav__btn">
                 <a class="nav__link" href="find.html"><i class="fas fa-search fa-2x"></i></a></li>
