--- a/settings.html
+++ b/settings.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Chats - Kokoa Clone</title>
+    <title>Settings - Kokoa Clone</title>
 </head>
 <body>
     <div class="status-bar">
@@ -23,35 +23,43 @@
         </div>
     </div>
 
-    <header class="screen-header">
-        <h1 class="screen-header__title">Chats</h1>
-        <div class="screen-header__icons">
-            <span><i class="fas fa-search fa-lg"></i></span>
-            <span><i class="far fa-comment-dots fa-lg"></i></span>
-            <span><i class="fas fa-music fa-lg"></i></span>
-            <span><i class="fas fa-cog fa-lg"></i></span>
+    <header class="alt-header">
+        <div class="alt-header__column">
+            <a href="more.html">
+            <i class="fas fa-angle-left fa-3x"></i></a>
+        </div>
+        <div class="alt-header__column">
+            <h1 class="alt-header__title">Settings</h1>
+        </div>
+        <div class="alt-header__column">
+            <i class="fas fa-search fa-lg"></i>
         </div>
     </header>
 
-    <a id="friends-display-link">
-        <i class="fas fa-info-circle"></i>Friends' Names Display<i class="fas fa-chevron-right fa-xs"></i>
-    </a>
-
-    <main class="main-screen"> 
-        <div class="user-component">
-            <div class="user-component__column">
-                <img src="https://d1telmomo28umc.cloudfront.net/media/public/avatars/whiteapple09-1630023509.jpg" 
-                class="user-component__avatar user-component__avatar"/>
-                <div class="user-component__text">
-                    <h4 class="user-component__title">KokoaTalk</h4>
-                    <h6 class="user-component_subtitle">Please check My Kokoa Account Info</h6>
+    <main class="main-screen">
+        <ul class="settings-list">
+            <li class="settings__setting">
+                <div class="settings__setting-column">
+                    <i class="fas fa-bullhorn"></i>
+                    <span>Notices</span>
+                </div>
+                <div class="settings__setting-column"></div>
+            </li>
+            <li class="settings__setting">
+                <div class="settings__setting-column">
+                <i class="fas fa-flask"></i>
+                <span>Kokoa Lab</span>
             </div>
-        </div>
-            <div class="user-component__column">
-                <span class="user-component__time">21:22</span>
-                <div class="badge">1</div>
+            <div class="settings__setting-column"></div>
+            </li>
+            <li class="settings__setting">
+                <div class="settings__setting-column">
+                <i class="fas fa-info-circle"></i>
+                <span>Version</span>
             </div>
-        </div>
+            <div class="settings__setting-column">Latest Version</div>
+            </li>
+        </ul>
     </main>
 
 
@@ -62,7 +70,7 @@
             <li class="nav__btn">
                 <a class="nav__link" href="chats.html">
                     <span class="nav__notification badge">1</span>
-                    <i class="fas fa-comment fa-2x"></i></a></li>
+                    <i class="far fa-comment fa-2x"></i></a></li>
             <li class="nav__btn">
                 <a class="nav__link" href="find.html"><i class="fas fa-search fa-2x"></i></a></li>
             <li class="nav__btn">
