--- a/chats.html
+++ b/chats.html
@@ -38,6 +38,7 @@
     </a>
 
     <main class="main-screen"> 
+        <a href="chat.html">
         <div class="user-component">
             <div class="user-component__column">
                 <img src="https://d1telmomo28umc.cloudfront.net/media/public/avatars/whiteapple09-1630023509.jpg" 
@@ -52,6 +53,7 @@
                 <div class="badge">1</div>
             </div>
         </div>
+    </a>
     </main>
 
 
