--- a/settings.html
+++ b/settings.html
@@ -32,7 +32,7 @@
             <h1 class="alt-header__title">Settings</h1>
         </div>
         <div class="alt-header__column">
-            <i class="fas fa-search fa-lg"></i>
+            <span><i class="fas fa-search fa-lg"></i></span>
         </div>
     </header>
 
