--- a/friends.html
+++ b/friends.html
@@ -87,7 +87,9 @@
                     <i class="fas fa-ellipsis-h fa-2x"></i></a></li>
         </ul>
     </nav>
-
+    <div id="splash-screen">
+        <i class="fas fa-comment"></i>
+    </div>
         <script src="https://kit.fontawesome.com/36680cdd77.js" crossorigin="anonymous"></script>
     </div>
 </body>
