--- a/friends.html
+++ b/friends.html
@@ -90,6 +90,10 @@
     <div id="splash-screen">
         <i class="fas fa-comment"></i>
     </div>
+
+    <div id="no-mobile">
+        <span>Your screen is too big ㅠㅠ</span>
+    </div>
         <script src="https://kit.fontawesome.com/36680cdd77.js" crossorigin="anonymous"></script>
     </div>
 </body>
