--- a/more.html
+++ b/more.html
@@ -107,6 +107,9 @@
         </ul>
     </nav>      
 
+    <div id="no-mobile">
+        <span>Your screen is too big ㅠㅠ</span>
+    </div>
         <script src="https://kit.fontawesome.com/36680cdd77.js" crossorigin="anonymous"></script>
     </div>
 </body>
