--- a/settings.html
+++ b/settings.html
@@ -80,6 +80,10 @@
         </ul>
     </nav>      
 
+    <div id="no-mobile">
+        <span>Your screen is too big ㅠㅠ</span>
+    </div>
+
         <script src="https://kit.fontawesome.com/36680cdd77.js" crossorigin="anonymous"></script>
     </div>
 </body>
