--- a/chat.html
+++ b/chat.html
@@ -78,7 +78,7 @@
     </form>
 
     <div id="no-mobile">
-        <span>Your screen is too big ㅠㅠ</span>
+        <span>Your screen is too big 😭 ㅠㅠ</span>
     </div>
 
    
