--- a/index.html
+++ b/index.html
@@ -39,9 +39,9 @@
             <a href="#">Find Kokoa Account or Password</a>
         </form>
 
-        
+
         <div id="no-mobile">
-            <span>Your screen is too big ㅠㅠ</span>
+            <span>Your screen is too big 😭 ㅠㅠ</span>
         </div>
 
         
