--- a/settings.html
+++ b/settings.html
@@ -81,7 +81,7 @@
     </nav>      
 
     <div id="no-mobile">
-        <span>Your screen is too big ㅠㅠ</span>
+        <span>Your screen is too big 😭 ㅠㅠ</span>
     </div>
 
         <script src="https://kit.fontawesome.com/36680cdd77.js" crossorigin="anonymous"></script>
